# myGaussian

./: CMakeLists.txt  README.md
src/: myGaussian.cpp
