PROJECT(opencv_example)

SET(EXECUTABLE_FILE_NAME myGaussian)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
if(COMMAND cmake_policy)
      cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

FIND_PACKAGE( OpenCV REQUIRED )

set(SOURCE_PATH ${PROJECT_SOURCE_DIR}/src)
AUX_SOURCE_DIRECTORY(${SOURCE_PATH} SRC_LIST)

# Declare the target (an executable)
ADD_EXECUTABLE(${EXECUTABLE_FILE_NAME}  ${SRC_LIST})

TARGET_LINK_LIBRARIES(${EXECUTABLE_FILE_NAME} ${OpenCV_LIBS})

#MESSAGE(STATUS "OpenCV_LIBS: ${OpenCV_LIBS}")
